// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders a default option 1`] = `
<li>
  <div
    className="button"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    1st Option
  </div>
</li>
`;

exports[`Button renders an active option 1`] = `
<li>
  <div
    className="button active"
    onClick={[Function]}
    role="button"
    tabIndex="0"
  >
    1st Option
  </div>
</li>
`;
